2009-06-04  Sébastien Sablé  <sable@users.sourceforge.net>

	* tests/sybase_dbapi20.py: Added unitary test for bug 1768935

	* datafmt.c (money_datafmt): Corrected money type when using
	CS_MONEY4 (close bug 2615821)

2009-03-06  Sébastien Sablé  <sable@users.sourceforge.net>

	* setup.py: Improved libraries detection for 64bits platforms 

2008-10-15  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Start using logging module

2008-09-26  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Corrected invalid row count in fetchmany

2008-07-21  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Simplified _fetch_rows

2008-07-04  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Added new exception DeadLockError when Sybase is in a
	deadlock situation

2008-06-27  Sébastien Sablé  <sable@users.sourceforge.net>

	* cmd.c: Corrected thread locking in ct_cmd_props (thanks to patch
	by Cyrille Froehlich)

2008-06-23  Sébastien Sablé  <sable@users.sourceforge.net>

	* Add command properties CS_STICKY_BINDS and CS_HAVE_BINDS

2008-06-19  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Added revision with svn keyword substitution

2008-06-18  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py (Bulkcopy): Added support for inputmap in bulkcopy

	* Sybase.py (Cursor.callproc): Corrected bug in type mapping in
	callproc (thanks to report by Skip Montanaro)

2008-06-17  Sébastien Sablé  <sable@users.sourceforge.net>

	* Sybase.py: Optimization: reuse command and cursor when calling
	cursor.execute with same request

	* Sybase.py: Use ct_setparam to define ct_cursor parameters types
	instead of ct_param

	* Sybase.py: Use CS_DATETIME_TYPE when passing CS_DATE_TYPE to
	ct_setparam with NULLDATA to avoid a sybase limitation

	* cmd.c: Adding ct_cmd_props wrapper

	* Adding implicit conversion for CS_DATE_TYPE in CS_DATETIME_TYPE DataBuf

	* sybasect.c: Adding CS_HAVE_CUROPEN property
